--- a/.github\workflows/terraform.yml
+++ b/.github\workflows/terraform.yml
@@ -8,7 +8,7 @@ on:
       - terraform/**
   pull_request: 
     branches:
-      - main:
+      - main
     paths:
       - terraform/**
 
@@ -32,7 +32,7 @@ jobs:
         shell: bash
         working-directory: ./terraform
     steps:
-      - name: Checkout teh source code
+      - name: Checkout the source code
         # Github actions fetch the workflow and upload it to github repo
         uses: actions/checkout@v4 
 
@@ -57,7 +57,7 @@ jobs:
         # because idf we did terraform apply directly , we gonna have parallel executions 
         run: terraform plan -no-color -input=false -out planfile 
         continue-on-error: true 
-        
+
         # we want to contoll the stop of the flow , to have acess to logs and error plan 
       - name: Terraform plan status 
         if: steps.plan.outcome == 'failure'
